; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/net/extr_if_smsc.c_smsc_ifmedia_sts.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/net/extr_if_smsc.c_smsc_ifmedia_sts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { %struct.smsc_softc* }
%struct.smsc_softc = type { i32 }
%struct.ifmediareq = type { i32, i32 }
%struct.mii_data = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ifnet*, %struct.ifmediareq*)* @smsc_ifmedia_sts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @smsc_ifmedia_sts(%struct.ifnet* %0, %struct.ifmediareq* %1) #0 {
  %3 = alloca %struct.ifnet*, align 8
  %4 = alloca %struct.ifmediareq*, align 8
  %5 = alloca %struct.smsc_softc*, align 8
  %6 = alloca %struct.mii_data*, align 8
  store %struct.ifnet* %0, %struct.ifnet** %3, align 8
  store %struct.ifmediareq* %1, %struct.ifmediareq** %4, align 8
  %7 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %8 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %7, i32 0, i32 0
  %9 = load %struct.smsc_softc*, %struct.smsc_softc** %8, align 8
  store %struct.smsc_softc* %9, %struct.smsc_softc** %5, align 8
  %10 = load %struct.smsc_softc*, %struct.smsc_softc** %5, align 8
  %11 = getelementptr inbounds %struct.smsc_softc, %struct.smsc_softc* %10, i32 0, i32 0
  %12 = call %struct.mii_data* @uether_getmii(i32* %11)
  store %struct.mii_data* %12, %struct.mii_data** %6, align 8
  %13 = load %struct.smsc_softc*, %struct.smsc_softc** %5, align 8
  %14 = call i32 @SMSC_LOCK(%struct.smsc_softc* %13)
  %15 = load %struct.mii_data*, %struct.mii_data** %6, align 8
  %16 = call i32 @mii_pollstat(%struct.mii_data* %15)
  %17 = load %struct.mii_data*, %struct.mii_data** %6, align 8
  %18 = getelementptr inbounds %struct.mii_data, %struct.mii_data* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.ifmediareq*, %struct.ifmediareq** %4, align 8
  %21 = getelementptr inbounds %struct.ifmediareq, %struct.ifmediareq* %20, i32 0, i32 1
  store i32 %19, i32* %21, align 4
  %22 = load %struct.mii_data*, %struct.mii_data** %6, align 8
  %23 = getelementptr inbounds %struct.mii_data, %struct.mii_data* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.ifmediareq*, %struct.ifmediareq** %4, align 8
  %26 = getelementptr inbounds %struct.ifmediareq, %struct.ifmediareq* %25, i32 0, i32 0
  store i32 %24, i32* %26, align 4
  %27 = load %struct.smsc_softc*, %struct.smsc_softc** %5, align 8
  %28 = call i32 @SMSC_UNLOCK(%struct.smsc_softc* %27)
  ret void
}

declare dso_local %struct.mii_data* @uether_getmii(i32*) #1

declare dso_local i32 @SMSC_LOCK(%struct.smsc_softc*) #1

declare dso_local i32 @mii_pollstat(%struct.mii_data*) #1

declare dso_local i32 @SMSC_UNLOCK(%struct.smsc_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
